--- a/src/components/modal/modal.module.sass
+++ b/src/components/modal/modal.module.sass
@@ -8,7 +8,6 @@
   bottom: 0
   background: rgba(0,0,0,0.3)
   z-index: 50
-  overflow-y: scroll
 
   .content
     margin: 0 auto
