--- a/src/components/search-line/search-line.module.sass
+++ b/src/components/search-line/search-line.module.sass
@@ -2,7 +2,7 @@
 
 .root
   background: $background2
-  border-top: 1px solid $border-color
+  border-bottom: 1px solid $border-color
   .container
     @include container
     padding-bottom: $m4
