--- a/src/layouts/general/general.module.sass
+++ b/src/layouts/general/general.module.sass
@@ -1,6 +1,4 @@
 .root
-  overflow-y: auto
-  max-height: 100vh
   .content
     min-height: 100vh
     display: flex
