--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -31,6 +31,7 @@ $xl: 1200px
 $border-radius-primary: 3px
 $border-color: #dfe3e6
 $box-shadow-primary: 0 1px 3px $color1
+$box-shadow-light: 0 0 5px $background1
 
 $zIndexPopup: 20
 
