--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -10,7 +10,6 @@ body
   color: $color1
   background-color: $background3
   margin: 0
-  overflow: hidden
 body *
   box-sizing: border-box
 input, textarea
